--- a/media sosial.html
+++ b/media sosial.html
@@ -48,6 +48,8 @@
       display: flex;
       justify-content: flex-end;
       padding: 10px 20px;
+      position: relative;
+      top: -100px;
     }
 
     .logo img {
@@ -141,7 +143,7 @@
   </div>
 
   <div class="udul">
-    <h2>MAMPIR JUGA DI MEDIA SOSIAL KAMI :)</h2>
+    <h2>MAMPIR JUGA KE MEDIA SOSIAL KAMI :)</h2>
   </div>
     <div class="line"></div>
   <div class="mediasosial">
